--- a/guides/alberta/general-income-tax-benefit-package.html
+++ b/guides/alberta/general-income-tax-benefit-package.html
@@ -132,7 +132,7 @@
                             <summary>If you were a non-resident or a deemed resident of Canada</summary>
                             <ul>
 				    <li>Use the&nbsp;<a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/non-residents.html">Income tax package for non-residents and deemed residents of Canada</a>.</li>
-				<li>And, if you were a <strong>non-resident</strong> of Canada throughout 2022 carrying on business in more than one province or territory or were receiving income from an office or employment that can reasonably be attributed to duties performed in more than one province or territory (or both) use <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2203.html">Form T2203, Provincial or territorial Taxes for Multiple Jurisdictions to calculate your provincia and territorial taxes</a>.</li>
+				<li>And, if you were a <strong>non-resident</strong> of Canada throughout 2022 carrying on business in more than one province or territory or were receiving income from an office or employment that can reasonably be attributed to duties performed in more than one province or territory (or both) use <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2203.html">Form T2203, Provincial or territorial Taxes for Multiple Jurisdictions</a> to calculate your provincial and territorial taxes.</li>
 				</ul>
                         </details>
                         <details class="mrgn-tp-md">
