changed h1 and JS

--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -14,12 +14,12 @@
 <!-- Meta data --> 
 <!-- Meta data--> 
 <!-- Load closure template scripts --> 
-<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/cdts/compiled/soyutils.js"></script> 
-<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/cdts/compiled/wet-en.js"></script>
-<link href="https://test.canada.ca/covid-19-guidance/proto/css/alpha-beta-banner.css" rel="stylesheet">
-<link href="https://www.canada.ca/etc/designs/canada/wet-boew/m%C3%A9li-m%C3%A9lo/2023-10-mount-revelstoke.min.css" rel="stylesheet">
-<link href="https://cra-arc.gc.ca/wet-boew/css/custom/noline-css.css" rel="stylesheet">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha256-mUZM63G8m73Mcidfrv5E+Y61y7a12O5mW4ezU3bxqW4=" crossorigin="anonymous"/>
+ <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/cdts/compiled/soyutils.js"></script>
+         <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/cdts/compiled/wet-en.js"></script>
+         <link href="https://test.canada.ca/covid-19-guidance/proto/css/alpha-beta-banner.css" rel="stylesheet">
+         <link href="https://www.canada.ca/etc/designs/canada/wet-boew/m%C3%A9li-m%C3%A9lo/2023-10-mount-revelstoke.min.css" rel="stylesheet">
+		 <link href="https://www.canada.ca/etc/designs/canada/wet-boew/css/theme.min.css" rel="stylesheet">
+         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha256-mUZM63G8m73Mcidfrv5E+Y61y7a12O5mW4ezU3bxqW4=" crossorigin="anonymous">
 
 <!-- Write closure template --> 
 <script type="text/javascript">
@@ -70,13 +70,15 @@
         <ul class="noline">
           <li> <a href="factors-federal.html" class="active" aria-current="page">Contract formed in a province or territory not in Quebec</a></li>
           <li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Contract formed in the province of Quebec</a> <a href="factors-quebec.html#gc-document-nav" class="visible-xs visible-sm">Contract formed the a province of Quebec</a></li>
+		   <li><a href="court-filter.html" class="hidden-xs hidden-sm">Court decisions or technical interpretations</a> <a href="court-filter#gc-document-nav" class="visible-xs visible-sm">Court decisions or technical interpretations</a></li>
+		    
         </ul>
       </li>
       <li><a href="factors-psb.html" class="hidden-xs hidden-sm">Determine if the worker is an incorporated employee </a> <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an incorporated employee</a></li>
       <li><a href="after.html" class="hidden-xs hidden-sm">Understand the tax obligations</a> <a href="after.html#gc-document-nav" class="visible-xs visible-sm"> Understand the tax obligations </a></li>
     </ul>
   </nav>
-  <h1 property="name" id="wb-cont" class="gc-thickline">Determine if the worker is an employee or self-employed: Contract formed in a province or territory not in Quebec</h1>
+  <h1 property="name" id="wb-cont" class="gc-thickline">Contract formed in a province or territory not in Quebec</h1>
   <p class="pull-left">Applies to: </p>
 
 <ul class="list-inline mrgn-bttm-md">
