--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -74,17 +74,7 @@
 
  <li>	 <a href="factors.html" class="active" aria-current="page">Determine if the worker is an employee or self-employed</a>	
 
-<ul class="noline">
 
-   <li><a href="factors-federal.html" class="hidden-xs hidden-sm">Contract formed in a province or territory not in Quebec</a>
-      <a href="factors-federal.html#gc-document-nav" class="visible-xs visible-sm">Contract formed in a province or territory not in Quebec </a></li>
-  
-  
-<li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Contract formed in the province of Quebec</a>
-      <a href="factors-quebec.html#gc-document-nav" class="visible-xs visible-sm">Contract formed in the province of Quebec</a></li>
- 
-                           
-                            </ul>
  </li>
 
 
@@ -112,23 +102,46 @@
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col">
-<ul class="fa-ul mrgn-bttm-lg">
+<h2 class="h4"> <a href="factors-federal.html">Contract formed in a province or territory not in Quebec</a></h2>
+<ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-check fa-li text-success"></span> In a province or a territory other than Quebec  </li>
 <li><span class="fas fa-check fa-li text-success"></span> Outside Canada and the employment is performed in a province or territory other than Quebec</li>
 </ul>
-<p>Continue to: <a href="/cra-arc/payroll/guidance/factors-federal.html">Contract formed in a province or territory not in Quebec</a></p>
+<p >Applies to: </p><ul class="list-inline mrgn-bttm-md">
+
+<li class="mrgn-rght-md"><img src="../images/flag-ab.png" class="mrgn-rght-sm" alt=""> AB</li>
+<li class="mrgn-rght-md"><img src="../images/flag-bc.png" class="mrgn-rght-sm" alt=""> BC</li>
+<li class="mrgn-rght-md"><img src="../images/flag-mb.png" class="mrgn-rght-sm" alt="">MB</li>
+<li class="mrgn-rght-md"><img src="../images/flag-nb.png" class="mrgn-rght-sm" alt=""> NB</li>
+<li class="mrgn-rght-md"><img src="../images/flag-nl.png" class="mrgn-rght-sm" alt=""> NL</li>
+<li class="mrgn-rght-md"><img src="../images/flag-nt.png" class="mrgn-rght-sm" alt=""> NT</li>
+<li class="mrgn-rght-md"><img src="../images/flag-ns.png" class="mrgn-rght-sm" alt=""> NS</li>
+<li class="mrgn-rght-md"><img src="../images/flag-nu.png" class="mrgn-rght-sm" alt=""> NU</li>
+<li class="mrgn-rght-md"><img src="../images/flag-on.png" class="mrgn-rght-sm" alt=""> ON</li>
+<li class="mrgn-rght-md"><img src="../images/flag-pe.png" class="mrgn-rght-sm" alt=""> PE</li>
+<li class="mrgn-rght-md"><img src="../images/flag-sk.png" class="mrgn-rght-sm" alt=""> SK</li>
+<li class="mrgn-rght-md"><img src="../images/flag-yt.png" class="mrgn-rght-sm" alt=""> YT</li>
+
+</ul>
 </li>
 <li class="cnjnctn-col">
-<ul class="fa-ul mrgn-bttm-lg">
+<h2 class="h4"><a href="factors-quebec.html">Contract formed in the province of Quebec</a></h2>
+<ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-check fa-li text-success"></span> In the province of Quebec</li>
 <li><span class="fas fa-check fa-li text-success"></span> Outside Canada and the employment is performed in Quebec</li>
 </ul>
+<p class="pull-left">Applies to: </p><ul class="list-inline mrgn-bttm-md">
 
-<p>Continue to: <a href="/cra-arc/payroll/guidance/factors-quebec.html">Contract formed in the province of Quebec</a></p>
+<li class="mrgn-rght-md"><img src="../images/flag-qc.png" class="mrgn-rght-sm" alt=""> QC</li>
+
+
+</ul>
+
 </li>
 </ul>
 
-
+<h2>Further considerations</h2>
+<p>To review past decisions or technical interpretations, refer to: <a href="court-filter.html" >Court decisions or technical interpretations</a></p>
 
 <section id="ajax-contract" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Validity of the contract</h2>
 	</header>	<div class="modal-body">	
