--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -14,16 +14,12 @@
          <!-- Meta data -->
          <!-- Meta data-->
        <!-- Load closure template scripts -->
-     <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/cdts/compiled/soyutils.js"></script>
-         <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/cdts/compiled/wet-en.js"></script>
+     <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/cdts/compiled/soyutils.js"></script>
+         <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/cdts/compiled/wet-en.js"></script>
          <link href="https://test.canada.ca/covid-19-guidance/proto/css/alpha-beta-banner.css" rel="stylesheet">
-         <link href="https://cra-arc.gc.ca/wet-boew/css/custom/steps.css" rel="stylesheet">
-		 <link href="https://www.canada.ca/etc/designs/canada/wet-boew/m%C3%A9li-m%C3%A9lo/2023-10-mount-revelstoke.min.css" rel="stylesheet">
-		     <link href="https://cra-arc.gc.ca/wet-boew/css/custom/noline-css.css" rel="stylesheet">
-         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha256-mUZM63G8m73Mcidfrv5E+Y61y7a12O5mW4ezU3bxqW4=" crossorigin="anonymous"/>
-           
-         <link href="https://test.canada.ca/covid-19-guidance/proto/css/alpha-beta-banner.css" rel="stylesheet">
-         <link href="https://cra-arc.gc.ca/wet-boew/css/custom/steps.css" rel="stylesheet">
+         <link href="https://www.canada.ca/etc/designs/canada/wet-boew/m%C3%A9li-m%C3%A9lo/2023-10-mount-revelstoke.min.css" rel="stylesheet">
+		 <link href="https://www.canada.ca/etc/designs/canada/wet-boew/css/theme.min.css" rel="stylesheet">
+         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha256-mUZM63G8m73Mcidfrv5E+Y61y7a12O5mW4ezU3bxqW4=" crossorigin="anonymous">
                <!-- Write closure template -->
          <script type="text/javascript">
             document.write(wet.builder.refTop({
@@ -81,20 +77,6 @@
 <li><a href="after.html" class="active" aria-current="page">Understand the tax obligations</a>
 
 
-<ul class="noline">
-
-<li><a href="tax-obligations-employee.html" class="hidden-xs hidden-sm">Employee and employer relationship</a>
-      <a href="tax-obligations-employee.html#gc-document-nav" class="visible-xs visible-sm">Employee and employer relationship</a></li>
- 
-
-   <li><a href="tax-obligations-self.html" class="hidden-xs hidden-sm">Self-employed and payer relationship</a>
-      <a href="tax-obligations-self.html#gc-document-nav" class="visible-xs visible-sm">Self-employed and payer relationship </a></li>
-  
-  
-<li><a href="tax-obligations-psb.html" class="hidden-xs hidden-sm">Incorporated employee and payer relationship</a>
-      <a href="tax-obligations-psb.html#gc-document-nav" class="visible-xs visible-sm">Incorporated employee and payer relationship</a></li>
-                            
-                            </ul>
 	</li>
 
  </ul>
