--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Employee and employer relationship - Understand the tax obligations - Determine the employment status: Employee, self-employed or incorporated employee - Canada.ca</title>
+         <title>Employee and employer relationship tax obligations - Determine the employment status: Employee, self-employed or incorporated employee - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -81,15 +81,15 @@
 
 <ul class="noline">
 
-<li><a href="tax-obligations.employee.html" class="active" aria-current="page">Employee and employer relationship</a></li>
+<li><a href="tax-obligations.employee.html" class="active" aria-current="page">Employee and employer relationship tax obligations</a></li>
 
 
-   <li><a href="tax-obligations-self.html" class="hidden-xs hidden-sm">Self-employed and payer relationship</a>
-      <a href="tax-obligations-self.html#gc-document-nav" class="visible-xs visible-sm">Self-employed and payer relationship </a></li>
+   <li><a href="tax-obligations-self.html" class="hidden-xs hidden-sm">Self-employed and payer relationship tax obligations</a>
+      <a href="tax-obligations-self.html#gc-document-nav" class="visible-xs visible-sm">Self-employed and payer relationship  tax obligations</a></li>
   
   
-<li><a href="tax-obligations-psb.html" class="hidden-xs hidden-sm">Incorporated employee and payer relationship</a>
-      <a href="tax-obligations-psb.html#gc-document-nav" class="visible-xs visible-sm">Incorporated employee and payer relationship</a></li>
+<li><a href="tax-obligations-psb.html" class="hidden-xs hidden-sm">Incorporated employee and payer relationship tax obligations</a>
+      <a href="tax-obligations-psb.html#gc-document-nav" class="visible-xs visible-sm">Incorporated employee and payer relationship tax obligations</a></li>
                             
                             </ul>
 	</li>
@@ -98,7 +98,7 @@
  
 </nav>
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Employee and employer relationship: Understand the tax obligations</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Employee and employer relationship tax obligations</h1>
  <div id="ajax-classification">
 <div class="alert alert-info">
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
