--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Self-employed and payer relationship - Understand the tax obligations - Determine the employment status: Employee, self-employed or incorporated employee - Canada.ca</title>
+         <title>Self-employed and payer relationship tax obligations - Determine the employment status: Employee, self-employed or incorporated employee - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -82,14 +82,14 @@
 <ul class="noline">
 
 
- <li><a href="tax-obligations-employee.html" class="hidden-xs hidden-sm">Employee and employer relationship</a>
-      <a href="tax-obligations-employee.html#gc-document-nav" class="visible-xs visible-sm">Employee and employer relationship</a></li>
+ <li><a href="tax-obligations-employee.html" class="hidden-xs hidden-sm">Employee and employer relationship tax obligations</a>
+      <a href="tax-obligations-employee.html#gc-document-nav" class="visible-xs visible-sm">Employee and employer relationship tax obligations</a></li>
 
-<li><a href="tax-obligations-self.html" class="active" aria-current="page">Self-employed and payer relationship</a></li>  
+<li><a href="tax-obligations-self.html" class="active" aria-current="page">Self-employed and payer relationship tax obligations</a></li>  
    
   
-<li><a href="tax-obligations-psb.html" class="hidden-xs hidden-sm">Incorporated employee and payer relationship</a>
-      <a href="tax-obligations-psb.html#gc-document-nav" class="visible-xs visible-sm">Incorporated employee and payer relationship</a></li>
+<li><a href="tax-obligations-psb.html" class="hidden-xs hidden-sm">Incorporated employee and payer relationship tax obligations</a>
+      <a href="tax-obligations-psb.html#gc-document-nav" class="visible-xs visible-sm">Incorporated employee and payer relationship tax obligations</a></li>
                             
                             </ul>
 	</li>
@@ -98,7 +98,7 @@
  
 </nav>
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Self-employed and payer relationship: Understand the tax obligations</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Self-employed and payer relationship tax obligations</h1>
 
 <div class="alert alert-info">
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
@@ -246,7 +246,7 @@
 <h2 id="1d">Tax obligations for employees of the self-employed worker</h2>
 <p>The tax obligations for employees of the self-employed worker are the same as regular employers.</p>
 
-<p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/guidance/tax-obligations-employee.html">Employee and employer relationship: Understand the tax obligations</a></p>
+<p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/guidance/tax-obligations-employee.html">Employee and employer relationship tax obligations</a></p>
 
 <h2 id="1c">Other tax obligations</h2>
 <p>Depending on the type of industry, the self-employed worker may have other tax obligations, for example: </p>
