--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -101,15 +101,15 @@
  
 <p>Before you determine if the worker is an incorporated employee, make sure a <a href="#ajax-contract" aria-controls="ajax-contract" class="overlay-lnk" role="button">valid contract <span class="far fa-question-circle"></span></a> was formed.</p>
 
-<p>You can answer a few questions to get results based on your situation or you have the choice to read the same information in <strong>full text</strong> continue to: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/tax-implications-personal-services-business.html">Tax implications for a personal services business</a></p>
+<h2 id="h_1">Answer a few questions to check if the worker is an incorporated employee</h2>
+<p>You can answer a few questions to get results based on your situation</p>
+<p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or results</p>
 
-
- <div class="well brdr-rds-0"> <span class="fa-stack text-muted fa-lg  mrgn-lft-sm pull-right"><i class="far fa-circle fa-stack-2x"></i><i class="fas fa-balance-scale-right fa-stack-1x"></i></span>
+<div class="well brdr-rds-0"> <span class="fa-stack text-muted fa-lg  mrgn-lft-sm pull-right"><i class="far fa-circle fa-stack-2x"></i><i class="fas fa-balance-scale-right fa-stack-1x"></i></span>
     <h3 class="h4 mrgn-tp-0">This content does not replace the law</h3>
     <p>This content does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement</strong>.</p>
   </div>
-<h2 id="h_1">Answer a few questions to check if the worker is an incorporated employee</h2>
-<p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or results</p>
+
 <div id="interactive"> 
 <div class="wb-frmvld gc-font-2019">  <form>
  <div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "inline":true, "noForm": true, "isoptional": true}'>
@@ -252,7 +252,9 @@
 <hr>
 <h2 id="h_2">References</h2>
 <h3 id="h_6-1">Resources</h3>
-<p><a href="https://www.canada.ca/en/revenue-agency/news/cra-multimedia-library/businesses-video-gallery/personal-services-business.html">Webinar: Personal Services Business</a> </p>
+<ul>
+<li><a href="https://www.canada.ca/en/revenue-agency/news/cra-multimedia-library/businesses-video-gallery/personal-services-business.html">Webinar: Personal Services Business</a> </li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/tax-implications-personal-services-business.html">Tax implications for a personal services business</a></li></ul>
 <h3 id="h_6-2">Legislation</h3>
 
 <div class="row">
