--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -79,9 +79,7 @@
     </ul>
   </nav>
   <h1 property="name" id="wb-cont" class="gc-thickline">Contract formed in a province or territory not in Quebec</h1>
-  <p class="pull-left">Applies to: </p>
-
-<ul class="list-inline mrgn-bttm-md">
+<p >Applies to employment performed within Canada (and outside Canada) where the employment is in: </p><ul class="list-inline mrgn-bttm-md">
 
 <li class="mrgn-rght-md"><img src="../images/flag-ab.png" class="mrgn-rght-sm" alt=""> AB</li>
 <li class="mrgn-rght-md"><img src="../images/flag-bc.png" class="mrgn-rght-sm" alt=""> BC</li>
@@ -96,7 +94,7 @@
 <li class="mrgn-rght-md"><img src="../images/flag-sk.png" class="mrgn-rght-sm" alt=""> SK</li>
 <li class="mrgn-rght-md"><img src="../images/flag-yt.png" class="mrgn-rght-sm" alt=""> YT</li>
 
-</ul>   
+</ul>  
 
   <div class="alert alert-info">
     <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
