--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -103,11 +103,8 @@
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col">
 <h2 class="h4"> <a href="factors-federal.html">Contract formed in a province or territory not in Quebec</a></h2>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> In a province or a territory other than Quebec  </li>
-<li><span class="fas fa-check fa-li text-success"></span> Outside Canada and the employment is performed in a province or territory other than Quebec</li>
-</ul>
-<p >Applies to: </p><ul class="list-inline mrgn-bttm-md">
+
+<p >Applies to employment performed within Canada (and outside Canada) where the employment is in: </p><ul class="list-inline mrgn-bttm-md">
 
 <li class="mrgn-rght-md"><img src="../images/flag-ab.png" class="mrgn-rght-sm" alt=""> AB</li>
 <li class="mrgn-rght-md"><img src="../images/flag-bc.png" class="mrgn-rght-sm" alt=""> BC</li>
@@ -126,11 +123,7 @@
 </li>
 <li class="cnjnctn-col">
 <h2 class="h4"><a href="factors-quebec.html">Contract formed in the province of Quebec</a></h2>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> In the province of Quebec</li>
-<li><span class="fas fa-check fa-li text-success"></span> Outside Canada and the employment is performed in Quebec</li>
-</ul>
-<p class="pull-left">Applies to: </p><ul class="list-inline mrgn-bttm-md">
+<p>Applies to employment performed within Canada (and outside Canada) where the employment is in:</p><ul class="list-inline mrgn-bttm-md">
 
 <li class="mrgn-rght-md"><img src="../images/flag-qc.png" class="mrgn-rght-sm" alt=""> QC</li>
 
