changed column width

--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -121,7 +121,7 @@
 
 </ul>
 </li>
-<li class="cnjnctn-col">
+<li class="cnjnctn-col-60">
 <h2 class="h4"><a href="factors-quebec.html">Contract formed in the province of Quebec</a></h2>
 <p>Applies to employment performed within Canada (and outside Canada) where the employment is in:</p><ul class="list-inline mrgn-bttm-md">
 
