revised doormat text

--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -79,7 +79,7 @@
     </ul>
   </nav>
   <h1 property="name" id="wb-cont" class="gc-thickline">Contract formed in a province or territory not in Quebec</h1>
-<p >Applies to employment performed within Canada (and outside Canada) where the employment is in: </p><ul class="list-inline mrgn-bttm-md">
+<p >Applies to employment performed in and outside Canada, where employment is in: </p><ul class="list-inline mrgn-bttm-md">
 
 <li class="mrgn-rght-md"><img src="../images/flag-ab.png" class="mrgn-rght-sm" alt=""> AB</li>
 <li class="mrgn-rght-md"><img src="../images/flag-bc.png" class="mrgn-rght-sm" alt=""> BC</li>
