--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -99,7 +99,7 @@
 
 
 <h1 property="name" id="wb-cont" class="gc-thickline">Contract formed in the province of Quebec</h1>
-<p>Applies to employment performed within Canada (and outside Canada) where the employment is in:</p><ul class="list-inline mrgn-bttm-md">
+<p>Applies to employment performed in and outside Canada, where employment is in:</p><ul class="list-inline mrgn-bttm-md">
 
 <li class="mrgn-rght-md"><img src="../images/flag-qc.png" class="mrgn-rght-sm" alt=""> QC</li>
 
