--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -104,7 +104,7 @@
 <li class="cnjnctn-col">
 <h2 class="h4"> <a href="factors-federal.html">Contract formed in a province or territory not in Quebec</a></h2>
 
-<p >Applies to employment performed within Canada (and outside Canada) where the employment is in: </p><ul class="list-inline mrgn-bttm-md">
+<p >Applies to employment performed in and outside Canada, where employment is in: </p><ul class="list-inline mrgn-bttm-md">
 
 <li class="mrgn-rght-md"><img src="../images/flag-ab.png" class="mrgn-rght-sm" alt=""> AB</li>
 <li class="mrgn-rght-md"><img src="../images/flag-bc.png" class="mrgn-rght-sm" alt=""> BC</li>
@@ -123,7 +123,7 @@
 </li>
 <li class="cnjnctn-col-60">
 <h2 class="h4"><a href="factors-quebec.html">Contract formed in the province of Quebec</a></h2>
-<p>Applies to employment performed within Canada (and outside Canada) where the employment is in:</p><ul class="list-inline mrgn-bttm-md">
+<p>Applies to employment performed in and outside Canada, where employment is in:</p><ul class="list-inline mrgn-bttm-md">
 
 <li class="mrgn-rght-md"><img src="../images/flag-qc.png" class="mrgn-rght-sm" alt=""> QC</li>
 
