--- a/payroll/guidance/court-filter.html
+++ b/payroll/guidance/court-filter.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Court decisions or technical interpretations for tax purposes to determine if the worker is an employee or self-employed - Calculate payroll deductions and contributions - Canada.ca</title>
+         <title>Court decisions for tax purposes to determine if the worker is an employee or self-employed -  Determine the employment status: Employee, self-employed or incorporated employee - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -73,7 +73,7 @@
                      <ul class="noline">
                         <li><a href="factors-federal.html" class="hidden-xs hidden-sm">Contract formed in a province or territory not in Quebec</a> <a href="factors-federal.html#gc-document-nav" class="visible-xs visible-sm">Contract formed in a province or territory not in Quebec</a></li>
                         <li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Contract formed in the province of Quebec</a> <a href="factors-quebec.html#gc-document-nav" class="visible-xs visible-sm">Contract formed the a province of Quebec</a></li>
-                        <li> <a href="court-table.html" class="active" aria-current="page">Court decisions or technical interpretations </a></li>
+                        <li> <a href="court-table.html" class="active" aria-current="page">Court decisions </a></li>
                      </ul>
                   </li>
                   <li><a href="factors-psb.html" class="hidden-xs hidden-sm">Determine if the worker is an incorporated employee </a>
@@ -84,8 +84,8 @@
                   </li>
                </ul>
             </nav>
-            <h1 property="name" id="wb-cont" class="gc-thickline">Court decisions or technical interpretations </h1>
-            <p>To help you in analysis to determine if the worker is an employee or self-employed, you may want to search court decisions or technical interpretations for tax purposes.</p>
+            <h1 property="name" id="wb-cont" class="gc-thickline">Court decisions</h1>
+            <p>You can search for court decisions to help determine whether the worker is an employee or self-employed for tax purposes.</p>
 			
              <section id="filteredEventsList" class="wb-tagfilter provisional">
                <div class="row">
@@ -105,68 +105,63 @@
                            <label for="decision">Decision from</label>
                            <select id="decision" name="decision" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
-                              <option value="decision-1">
-                                 Supreme Court of Canada
-                              </option>
+                              <option value="decision-1">Supreme Court of Canada</option>
                               <option value="decision-2">Federal Court of Appeal</option>
-                              <option value="decision-3">CRA technical interpretation</option>
+                              <option value="decision-3">Tax Court of Canada</option>
                            </select>
+
                            <label for="industry">Industry</label>
                            <select id="industry" name="industry" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
-                              <option value="industry-1">Construction</option>
-                              <option value="industry-2">Accommodation and food services</option>
-                              <option value="industry-3">Administrative and support, waste management and remediation services</option>
-                              <option value="industry-4">Agriculture, forestry, fishing and hunting</option>
-                              <option value="industry-5">
-                                 Arts, entertainment and recreation
-                              </option>
+                              <option value="industry-1">Accommodation and food services</option>
+ 			    <option value="industry-2">Administrative and support, waste management and remediation services</option>
+			 <option value="industry-3">Agriculture, forestry, fishing and hunting</option>
+				<option value="industry-4">Arts, entertainment and recreation</option>
+				   <option value="industry-5">Construction</option>
+                                                          
                               <option value="industry-6">
-                                 Construction
-                              </option>
-                              <option value="industry-7">
                                  Educational services
                               </option>
-                              <option value="industry-8">
+                              <option value="industry-7">
                                  Finance and insurance
                               </option>
                               <option value="industry-8">
                                  Health care and social assistance
                               </option>
-                              <option value="industry-10">
+                              <option value="industry-9">
                                  Information and cultural industries
                               </option>
-                              <option value="industry-11">
+                              <option value="industry-10">
                                  Management of companies and enterprises
                               </option>
-                              <option value="industry-12">
+                              <option value="industry-11">
                                  Manufacturing
                               </option>
-                              <option value="industry-13">
+                              <option value="industry-12">
                                  Mining, quarrying, and oil and gas extraction
                               </option>
-                              <option value="industry-14">
-                                 Other services (except public administration)
+                              <option value="industry-13">
+                                 Other services, except public administration
                               </option>
-                              <option value="industry-15">
+                              <option value="industry-14">
                                  Professional, scientific and technical services
                               </option>
-                              <option value="industry-16">
+                              <option value="industry-15">
                                  Public administration
                               </option>
-                              <option value="industry-17">
+                              <option value="industry-16">
                                  Real estate and rental and leasing
                               </option>
-                              <option value="industry-18">
+                              <option value="industry-17">
                                  Retail trade
                               </option>
-                              <option value="industry-19">
+                              <option value="industry-18">
                                  Transportation and warehousing
                               </option>
-                              <option value="industry-20">
+                              <option value="industry-19">
                                  Utilities
                               </option>
-                              <option value="industry-21">
+                              <option value="industry-20">
                                  Wholesale trade
                               </option>
                            </select>
