--- a/payroll/guidance/court-filter.html
+++ b/payroll/guidance/court-filter.html
@@ -93,16 +93,16 @@
                      <details class="provisional wb-details-close mrgn-bttm-lg px-2" open><summary class="mrgn-lft-0 mrgn-rght-0"><span class="fas fa-filter"></span> Filter</summary>
                      <div class="form-group">
                         <fieldset>
-                           <label for="outcome">Outcome</label>
-                           <select id="outcome" name="outcome" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
+                           <label for="result">Result</label>
+                           <select id="result" name="result" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
-                              <option value="outcome-1">
+                              <option value="result-1">
                                  Employer and employee
                               </option>
-                              <option value="outcome-2">Self-employed</option>
-                              <option value="outcome-3">No result</option>
+                              <option value="result-2">Self-employed</option>
+                              <option value="result-3">Not available</option>
                            </select>
-                           <label for="decision">Decision from</label>
+                           <label for="decision">Court decision</label>
                            <select id="decision" name="decision" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
                               <option value="decision-1">Supreme Court of Canada</option>
@@ -170,7 +170,7 @@
                            <select id="intent" name="intent" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
                               <option value="intent-1">Employer and employee</option>
-                              <option value="intent-2">Self-employed</option>
+                              <option value="intent-2">Self-employed worker</option>
                            </select>
                            <label for="">Supervision
                            </label>
@@ -196,7 +196,7 @@
                            </label>
                            <select id="schedule" name="schedule" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
-                              <option value="schedule-1">Worker sets his or her own hours and schedule</option>
+                              <option value="schedule-1">Worker sets their own hours and schedule</option>
                               <option value="schedule-2">Hirer sets the worker's hours and schedule</option>
                            </select>
                            <label for="workshould">Freedom to determine how work should be done
@@ -278,12 +278,12 @@
         <div class="wb-tagfilter-items">
           <ul class="list-unstyled link-list lst-spcd-2">
 				
-                        <li data-wb-tags="outcome-1 industry-1" class="well brdr-rds-0">
-                              <p class="h4 mrgn-tp-0"><a href="#">[link]</a></p>
+                        <li data-wb-tags="result-1 industry-1" class="well brdr-rds-0">
+                              <p class="h4 mrgn-tp-0">Title: <a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/489451/index.do">AE Hospitality Ltd. v. Canada (National Revenue) (Chefs - multiple)</a></p>
                               <ul class="list-unstyled mrgn-bttm-md">
-                                 <li><strong>Outcome:</strong> [abc]</li>
-                                 <li><strong>Decision from:</strong> [def]</li>
-                                 <li><strong>Industry:</strong> [ghi]</li>
+                                 <li><strong>Result:</strong> Employee</li>
+                                 <li><strong>Court decision:</strong> Federal Court of Appeal</li>
+                                 <li><strong>Industry:</strong> Accommodation and food services</li>
                               </ul>
                               <details>
                                  <summary>Summary</summary>
