--- a/payroll/guidance/court-filter.html
+++ b/payroll/guidance/court-filter.html
@@ -283,6 +283,9 @@
                               <ul class="list-unstyled mrgn-bttm-md">
                                  <li><strong>Result:</strong> Employee</li>
                                  <li><strong>Court decision:</strong> Federal Court of Appeal</li>
+				   <li><strong>Reference:</strong> 2020 FCA 207</li>     
+				    <li><strong>File numbers:</strong>  A-268-19, A-269-19</li>  
+				     <li><strong>Acts:</strong> Canada Pension Plan, Employment Insurance Act</li>     
                                  <li><strong>Industry:</strong> Accommodation and food services</li>
                               </ul>
                               <details>
