--- a/payroll/guidance/court-filter.html
+++ b/payroll/guidance/court-filter.html
@@ -291,22 +291,20 @@
                               <details>
                                  <summary>Summary</summary>
                                  <ul>
-                                    <li>[content]</li>
-                                    <li>[content]</li>
-                                    <li>[content]</li>
-                                    <li>[content]</li>
-                                    <li>[content]</li>
-                                    <li>[content]</li>
-                                    <li>[content]</li>
-                                    <li>[content]</li>
-                                    <li>[content]</li>
-                                    <li>[content]</li>
-                                    <li>[content]</li>
-                                    <li>[content]</li>
-                                    <li>[content]</li>
-                                    <li>[content]</li>
-                                    <li>[content]</li>
-                                    <li>[content]</li>
+                                    <li>Worker does not have the freedom to determine how work should be done</li>
+                                    <li>Worker is monitored or supervised by the hirer</li>
+                                    <li>Hirer sets the worker's hours and schedule</li>
+                                    <li>The hirer owns the most important tools or equipment</li>
+                                    <li>The parties intended to characterize the worker as an independent contractor</li>
+                                    <li>Worker is not personally at risk of loss</li>
+                                    <li>Hirer determines what work is to be done</li>
+                                    <li>Worker is not free to delegate or subcontract work</li>
+				    <li>Worker is not reimbursed for work-related travel expenses</li> 
+                                    <li>Hirer imposes a dress code or requires a uniform</li>
+                                    <li>The worker works at the hirer's workplace</li>
+                                    <li>Hirer provides the worker with training</li>
+                                    <li>The worker does not have the freedom to turn down work from hirer</li>
+                                    
                                  </ul>
                               </details>
                         </li>
