--- a/payroll/guidance/court-filter-alt.html
+++ b/payroll/guidance/court-filter-alt.html
@@ -9,7 +9,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Court decisions - Determine the employment status: Employee, incorporated employee or self-employed - Canada.ca</title>
+         <title>Court decisions on employment status - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -48,7 +48,11 @@
               },{
                 title: "Payroll",
                 href: "../index.html"
-              }
+              },{
+                title: "Determine the employment status: Employee, self-employed or incorporated employee",
+                href: "index.html"
+             
+                }
               ],
               search: true,
               siteMenu: true,
@@ -60,7 +64,7 @@
 
       <div aria-hidden="true">
     <p class="lead mrgn-tp-md mrgn-bttm-0 text-muted"> </p>
-    <h1 class="gc-thickline mrgn-tp-0">Court decisions on employment status: Employee, self-employed or incorporated employee</h1>
+    <h1 class="gc-thickline mrgn-tp-0">Court decisions on employment status</h1>
   </div>
 
 <p>You can search for court decisions to help determine whether the worker is an employee or self-employed for tax purposes.</p>
