--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -261,7 +261,7 @@
 <details id="tab2">
         <summary>Read full-text</summary>
         <div id="static">
-          <h2 class="mrgn-tp-sm">Full-text to determine to determine if the worker is an incorporated employee</h2>
+          <h4>Full-text to determine to determine if the worker is an incorporated employee</h4>
 		<div class="mwsbodytext text parbase section">
     
 
