--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -103,7 +103,7 @@
 <p>Before you determine if the worker is an incorporated employee, make sure a <a href="#ajax-contract" aria-controls="ajax-contract" class="overlay-lnk" role="button">valid contract <span class="far fa-question-circle"></span></a> was formed.</p>
 </li>
 <li>
-<h3>Review criteria to determine if the worker is an incorporated employee</h3>
+<h3>Review criteria and make a determination</h3>
 <p>The following provides the same information in <strong>two</strong> different formats:</p>
 <ul class="cnjnctn-type-or cnjnctn-sm">
 	<li class="cnjnctn-col"><a href="#interactive">Interactive questions</a> to get specific results, based on your answers</li>
@@ -261,7 +261,7 @@
 <details id="tab2">
         <summary>Read full-text</summary>
         <div id="static">
-          <h4>Full-text to determine to determine if the worker is an incorporated employee</h4>
+          <h4 class="mrgn-tp-sm">Full-text to determine to determine if the worker is an incorporated employee</h4>
 		<div class="mwsbodytext text parbase section">
     
 
