--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -134,7 +134,7 @@
 </ul>
 
 <h2>Further considerations</h2>
-<p>To review past decisions or technical interpretations, refer to: <a href="court-filter.html" >Court decisions or technical interpretations</a></p>
+<p>Review past decisions: <a href="court-filter.html" >Court decisions on employment status</a></p>
 
 <section id="ajax-contract" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Validity of the contract</h2>
 	</header>	<div class="modal-body">	
