--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -133,8 +133,8 @@
 </li>
 </ul>
 
-<h2>Further considerations</h2>
-<p>Review past decisions: <a href="court-filter.html" >Court decisions on employment status</a></p>
+<h2>Past rulings</h2>
+<p>Review historical determinations: <a href="court-filter.html" >Court decisions on employment status</a></p>
 
 <section id="ajax-contract" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Validity of the contract</h2>
 	</header>	<div class="modal-body">	
