revised payroll IA

--- a/payroll/guidance/index.html
+++ b/payroll/guidance/index.html
@@ -90,10 +90,15 @@
 </dl>            
 
 </nav>
-
+<aside>
+	   <h2 class="h3">Prior rulings</h2>
+	   <ul>
+	     <li><a href="court-filter.html">Court decisions on employment status</a></li>
+	   </ul>
+	</aside>
 </div>
 
-</div><br>
+</div>
 
             <div id="def-preFooter"></div>
             <!-- Write closure template -->
