added no-results message reset

--- a/payroll/guidance/court-filter.html
+++ b/payroll/guidance/court-filter.html
@@ -328,7 +328,7 @@
 						 
                      </div>
                     <div class="wb-tagfilter-noresult">
-                        <p>No result.</p>
+                        <p>Based on your filter selections, there are no results available.  Please select less filter options, or <a href="?">reset the page</a>.</p>
                      </div>
                   </div>
                </div>
