added step design

--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -108,16 +108,21 @@
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
 
-<h2 class="h3">On this page:</h2>
 <ul>
-<li><a href="#h_0">Determine where the contract was formed</a></li>
-<li><a href="#h_1">Gather all facts to determine the status of the worker</a></li>
-<li><a href="#h_2">Final analysis based on all factors</a></li>
-<li><a href="#h_3">What if you are not sure if the worker is an employee or self-employed</a></li>
-<li><a href="#h_4">References</a></li>
+<li><a href="#h_1">Steps</a>
+<ul>
+<li><a href="#h_1_1">Determine where the contract was formed</a></li>
+<li><a href="#h_1_2">Gather all facts to determine the status of the worker</a></li>
+<li><a href="#h_1_3">Final analysis based on all factors</a></li>
 </ul>
-
-  <h2 id="h_0">Determine where the contract was formed</h2>
+</li>
+<li><a href="#h_2">What if you are not sure if the worker is an employee or self-employed</a></li>
+<li><a href="#h_3">References</a></li>
+</ul>
+ <h2 id="h_1">Steps</h2>
+ <ol class="lst-stps ld-zr">
+ <li>
+  <h3 id="h_1_1">Determine where the contract was formed</h3>
   <p>The CRA developed a guidance to help determine the status of the worker.</p>
 
  <p>Use this guidance if the <a href="#ajax-contract" aria-controls="ajax-contract" class="overlay-lnk" role="button">valid contract <span class="far fa-question-circle"></span></a> was formed (unless the contract states differently):</p>
@@ -127,19 +132,20 @@
 </ul>
 
   <div class="well brdr-rds-0"> <span class="fa-stack text-muted fa-lg  mrgn-lft-sm pull-right"><i class="far fa-circle fa-stack-2x"></i><i class="fas fa-balance-scale-right fa-stack-1x"></i></span>
-    <h3 class="h4 mrgn-tp-0">This content is for guidance only</h3>
+    <h4 class="h4 mrgn-tp-0">This content is for guidance only</h4>
     <p>This guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement</strong>.</p>
   </div>
 
 <p>This new information was developed based on guide <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4110/employee-self-employed.html">RC4110, Employee or Self-employed?</a></p>
-  
- <h2 id="h_1">Gather all facts to determine the status of the worker</h2>
+  </li>
+  <li>
+ <h3 id="h_1_2">Gather all facts to determine the status of the worker</h3>
 <p>The indicators from <strong>each question</strong> need to be viewed as a whole in order to help you decide. This also needs to be done on a <strong>case-by-case basis</strong>.</p>
   <p>Review the questions for each factor, and make a selection to help you gather the facts based on your situation.</p>
 
  <ul class="fa-ul">
     <li class="mrgn-lft-md"><span class="fa-li fa-2x"><span class="fas fa-handshake"></span></span>
-      <h3 id="factor1">Contract of the working arrangement – Factor 1</h3>
+      <h4 id="factor1">Contract of the working arrangement – Factor 1</h4>
       <p id="1_2">The CRA asks the worker and the payer what their intent was when they entered into the working arrangement. Workers and payers can choose how they set up their affairs. However, the employment status they choose must reflect their working relationship.</p>
       <p class="h5" id="f1q01">At the time of contracting, how did the parties intend to characterize the relationship? </p>
       <div id="acc-f1q01" aria-describedby="f1q01">
@@ -184,7 +190,7 @@
       </div>
     </li>
     <li class="mrgn-lft-md"><span class="fa-li fa-2x"><span class="fas fa-file-contract"></span></span>
-      <h3 id="factor2">Documents to review – Factor 2</h3>
+      <h4 id="factor2">Documents to review – Factor 2</h4>
       <p id="2_2">When reviewing the worker’s and payer’s documents, the type of documents and the manner in which the information is documented can provide important clues into the relationship between the 2 parties. </p>
       <p class="h5" id="f2q01">Is the worker listed on payer’s payroll?</p>
       <div id="acc-f2q01" aria-describedby="f2q01">
@@ -442,7 +448,7 @@
       </div>
     </li>
     <li class="mrgn-lft-md"><span class="fa-li fa-2x"><span class="fas fa-chart-line"></span></span>
-      <h3 id="factor3">Performance of work – Factor 3</h3>
+      <h4 id="factor3">Performance of work – Factor 3</h4>
       <p id="3_2">Control over where, when and how the work is done  need to be considered when determining the degree of control held by the payer or the degree of independence held by the worker. The actual degree of control will vary with the type of work and the skills of the worker.</p>
       <p class="h5" id="f3q01">Did the worker’s position have a job description in the payer’s internal policies?</p>
       <div id="acc-f3q01" aria-describedby="f3q01">
@@ -558,7 +564,7 @@
       </div>
     </li>
     <li class="mrgn-lft-md"><span class="fa-li fa-2x"><span class="fas fa-hand-holding-usd"></span></span>
-      <h3 id="factor4">Remunerations paid to the worker – Factor 4</h3>
+      <h4 id="factor4">Remunerations paid to the worker – Factor 4</h4>
       <p id="4_2">In both types of arrangements (employee or self-employed) remuneration must be paid or due to the worker. However, what the remuneration was based on, the frequency of payments, whether there were deductions withheld, and how the worker requests payments can be key indicators of either a work who is an employee or one who is self-employed. </p>
       <p class="h5" id="f4q01">Were there any non-monetary benefits associated with the remuneration? </p>
       <div id="acc-f4q01" aria-describedby="f4q01">
@@ -723,7 +729,7 @@
       </div>
     </li>
     <li class="mrgn-lft-md"><span class="fa-li fa-2x"><span class="fas fa-users-cog"></span></span>
-      <h3 id="factor5">Relationship of subordination with the worker – Factor 5</h3>
+      <h4 id="factor5">Relationship of subordination with the worker – Factor 5</h4>
       <p id="5_2">Under the civil law the relationship of subordination constitutes the main element for determining a worker’s status. From the Civil Code of Quebec it is concluded that the existence of a relationship of subordination with respect to the performance of work is the main element of a contract of employment. The subordination is a legal subordination and, however minimal, suggests the existence of a contract of employment.</p>
       <p class="h5" id="f5q01">Did the worker work at a designated location?</p>
       <div id="acc-f5q01" aria-describedby="f5q01">
@@ -1028,14 +1034,19 @@
       </div>
     </li>
   </ul>
-
-<h2 id="h_2">Final analysis based on all factors</h2>
+</li>
+<li>
+<h2 id="h_1_3">Final analysis based on all factors</h2>
 
 <div data-ajax-replace="/cra-arc/payroll/guidance/factors-federal.html#ajax-facts"></div>
- 	 
-<h2 id="h_4">References</h2>
+ 	 </li>
+	 </ol>
+	 <h2 id="h_2">What if you are not sure if the worker is an employee or self-employed</h2>
+<div data-ajax-replace="/cra-arc/payroll/guidance/overview.html#ajax-ruling"></div>
+  </div>
+<h2 id="h_3">References</h2>
 
-<h3 id="h_6_2">Legislation and Court cases</h3>
+<h3 id="h_3_1">Legislation and Court cases</h3>
 <div class="row">
 <div class="col-xs-12">
 <dl class="dl-horizontal">
