--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -102,14 +102,20 @@
 <h2 class="h3">On this page:</h2>
   	
 <ul>
-<li><a href="#h_0">Determine where the contract was formed</a></li>
-<li><a href="#h_1">Gather all facts to determine the status of the worker</a></li>
-<li><a href="#h_2">Final analysis based on all factors</a></li>
-<li><a href="#h_3">What if you are not sure if the worker is an employee or self-employed</a></li>
-<li><a href="#h_4">References</a></li>
+<li><a href="#h_1">Steps</a>
+<ul>
+<li><a href="#h_1_1">Determine where the contract was formed</a></li>
+<li><a href="#h_1_2">Gather all facts to determine the status of the worker</a></li>
+<li><a href="#h_1_3">Final analysis based on all factors</a></li>
 </ul>
-
-  <h2 id="h_0">Determine where the contract was formed</h2>
+</li>
+<li><a href="#h_2">What if you are not sure if the worker is an employee or self-employed</a></li>
+<li><a href="#h_3">References</a></li>
+</ul>
+ <h2 id="h_1">Steps</h2>
+ <ol class="lst-stps ld-zr">
+ <li>
+  <h3 id="h_1_1">Determine where the contract was formed</h3>
   <p>The CRA developed a guidance to help determine the status of the worker.</p>
 <p> Use this guidance if the <a href="#ajax-contract" aria-controls="ajax-contract" class="overlay-lnk" role="button">valid contract <span class="far fa-question-circle"></span></a> was formed (unless the contract states differently):</p>
   <ul class="fa-ul mrgn-bttm-lg">
@@ -117,20 +123,21 @@
     <li><span class="fas fa-check fa-li text-success"></span> Outside Canada and the employment is performed in a province or territory other than Quebec</li>
   </ul>
   <div class="well brdr-rds-0"> <span class="fa-stack text-muted fa-lg  mrgn-lft-sm pull-right"><i class="far fa-circle fa-stack-2x"></i><i class="fas fa-balance-scale-right fa-stack-1x"></i></span>
-    <h3 class="h4 mrgn-tp-0">This content is for guidance only</h3>
+    <h4 class="h4 mrgn-tp-0">This content is for guidance only</h4>
     <p>This guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement</strong>.</p>
   </div>
 
 <p>This new information was developed based on guide <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4110/employee-self-employed.html">RC4110, Employee or Self-employed?</a></p>
-  
+  </li>
+   <li>
 
-  <h2 id="h_1">Gather all facts to determine the status of the worker</h2>
+  <h3 id="h_1_2">Gather all facts to determine the status of the worker</h3>
 
   <p>The indicators from <strong>each question</strong> need to be viewed as a whole in order to help you decide. This also needs to be done on a <strong>case-by-case basis</strong>.</p>
   <p>Review the questions for each factor, and make a selection to help you gather the facts based on your situation.</p>
  <ul class="fa-ul">
     <li class="mrgn-lft-md"><span class="fa-li fa-2x"><span class="fas fa-handshake"></span></span>
-      <h3 id="factor1">Contract of the working arrangement – Factor 1</h3>
+      <h4 id="factor1">Contract of the working arrangement – Factor 1</h4>
       <p>The CRA asks the worker and the payer what their intent was when they entered into the working arrangement. Workers and payers can choose how they set up their affairs. However, the working status they choose must reflect their working relationship.</p>
       <p class="h5" id="f1q01">At the time of contracting, how did the parties intend to characterize the relationship? </p>
       <div id="acc-f1q01" aria-describedby="f1q01">
@@ -198,7 +205,7 @@
       </div>
     </li>
     <li class="mrgn-lft-md"><span class="fa-li fa-2x"><span class="fas fa-clipboard-list"></span></span>
-      <h3 id="factor2">Control over the work – Factor 2</h3>
+      <h4 id="factor2">Control over the work – Factor 2</h4>
       <p>Control is the ability, authority, or right of a payer to exercise control over a worker concerning the manner in which the work is done and what work will be done. Consider the degree of control held by the payer or the degree of independence held by the worker. The actual degree of control will vary with the type of work and the skills of the worker. </p>
       <section class="panel panel-default">
         <header class="panel-heading">
@@ -911,7 +918,7 @@
       </section>
     </li>
     <li class="mrgn-lft-md"><span class="fa-li fa-2x"><span class="fas fa-tools"></span></span>
-      <h3 id="factor3">Ownership of the tools and equipment – Factor 3</h3>
+      <h4 id="factor3">Ownership of the tools and equipment – Factor 3</h4>
       <p id="3">Consider if the worker owns and provides tools and equipment to accomplish the work. Contractual control of, and responsibility for, an asset in a rental or lease situation is also considered under this factor.</p>
       <details class="mrgn-bttm-xl">
         <summary>What is considered a significant investment</summary>
@@ -1057,7 +1064,7 @@
       </div>
     </li>
     <li class="mrgn-lft-md"><span class="fa-li fa-2x"><span class="fas fa-user-friends"></span></span>
-      <h3 id="factor4">Subcontracting of work or hiring assistants – Factor 4</h3>
+      <h4 id="factor4">Subcontracting of work or hiring assistants – Factor 4</h4>
       <p>Consider if the worker can subcontract work or hire assistants. This factor can help decide a worker's business presence because subcontracting work or hiring assistants can affect their chance of profit and risk of loss.</p>
       <p class="h5" id="f4q01">Can the worker subcontract the work without the approval of the payer?</p>
       <div id="acc-f4q01" aria-describedby="f4q01">
@@ -1107,7 +1114,7 @@
       </div>
     </li>
     <li class="mrgn-lft-md"><span class="fa-li fa-2x"><span class="fas fa-hand-holding-usd fa-rotate-180"></span></span>
-      <h3 id="factor5">Financial risk  taken on by the worker – Factor 5</h3>
+      <h4 id="factor5">Financial risk  taken on by the worker – Factor 5</h4>
       <p id="5">Consider the degree of financial risk taken by the worker. Consider if there are any fixed ongoing costs incurred by the worker or any expenses that are not reimbursed.</p>
       <details class="mrgn-bttm-xl">
         <summary>Employees will usually not have financial risks</summary>
@@ -1326,7 +1333,7 @@
       </div>
     </li>
     <li class="mrgn-lft-md"><span class="fa-li fa-2x"><span class="fas fa-donate"></span></span>
-      <h3 id="factor6">Responsibility for investment and management held by the worker – Factor 6</h3>
+      <h4 id="factor6">Responsibility for investment and management held by the worker – Factor 6</h4>
       <p>Consider the degree of responsibility for investment and management held by the worker. A significant investment is evidence that a business relationship may exist. You should also consider if the worker is free to make business decisions that affect their profit or loss.</p>
       <p class="h5" id="f6q01">Does the worker have an operating name? </p>
       <div id="acc-f6q01" aria-describedby="f6q01">
@@ -1656,7 +1663,7 @@
       </div>
     </li>
     <li class="mrgn-lft-md"><span class="fa-li fa-2x"><span class="fas fa-money-bill-wave"></span></span>
-      <h3 id="factor7">Opportunity for profit – Factor 7</h3>
+      <h4 id="factor7">Opportunity for profit – Factor 7</h4>
       <p id="7">Consider whether the worker can realize a profit or incur a loss, as this indicates that a worker controls the business aspects of services rendered and that a business relationship likely exists. To have a chance of a profit and a risk of a loss, a worker has to have potential proceeds and expenses, and one could exceed the other.</p>
       <details class="mrgn-bttm-xl">
         <summary>Consider this factor from the worker's perspective</summary>
@@ -1879,9 +1886,11 @@
       </div>
     </li>
   </ul>
-  <h2 id="h_2">Final analysis based on all factors</h2>
+  </li>
+   <li>
+  <h3 id="h_1_3">Final analysis based on all factors</h2>
   <div id="ajax-facts">
-    <h3 id="analyze">Analyze the facts</h3>
+    <h4 id="analyze">Analyze the facts</h4>
     <p>You need to analyze the facts by organizing and assessing the information you gathered. This process will move the worker into one side of the continuum, and confirm if there is an employment relationship, or if the worker is in business on his own account.</p>
     <p>You must analyze the answer to each question from both the payer <strong>and </strong>the worker to help you decide if the evidence moves the worker to the employee or self-employed side of the continuum.</p>
     <p>After gathering the facts, you may be able to decide based on the following indicators:</p>
@@ -1897,18 +1906,20 @@
         <p>If the worker is self-employed, continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/after.html">Understand the tax obligations</a></p>
       </li>
     </ul>
-    <h3 id="weight">Weighing the facts</h3>
+    <h4 id="weight">Weighing the facts</h4>
     <p>This is the most important part of analyzing the information. When reviewing the factors, there may be some facts that support an employee-employer relationship and other facts indicate self-employement.</p>
     <p>To help you resolve this issue, you must determine the true essence of the working relationship of the parties. You must review the indicators in the factors of control, ownership of tools and equipment, opportunity for profit and financial risk, and responsibility for investment and management. As you respond to each question you should be able to decide what weight to assign each category based on a thorough review of all the responses. For example, control may favour an employee relationship, but ownership of tools may be assigned <strong>more weight </strong>due to how the total relationship is structured. This may be an indicator because of the increased weight given to this factor, the worker is moved into the independent contractor side of the continuum.</p>
-    <h3 id="case">Review each situation on a case-by-case basis</h3>
+    <h4 id="case">Review each situation on a case-by-case basis</h4>
     <p>Whether a worker is an employee or self-employed needs to be analyzed on a case-by-case basis. Each case is unique and requires a thorough review of the facts. It is also important to remember that when attempting to move a worker to one side of the continuum or the other, you must examine the <strong>total working relationship</strong>. There is no one factor that is determinative, and there is a non-exhaustive list of factors to consider.</p>
-
- <h2 id="h_3">What if you are not sure if the worker is an employee or self-employed</h2>
+ </li>
+  </ol>
+ <h2 id="h_2">What if you are not sure if the worker is an employee or self-employed</h2>
 <div data-ajax-replace="/cra-arc/payroll/guidance/overview.html#ajax-ruling"></div>
   </div>
-  <h2 id="h_4">References</h2>
+ 
+  <h2 id="h_3">References</h2>
 
-<h3 id="h_6_1">Supreme Court of Canada</h3>
+<h3 id="h_3_1">Supreme Court of Canada</h3>
 <div class="row">
 <div class="col-xs-12">
 <dl class="dl-horizontal">
