--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -106,7 +106,7 @@
 <ul>
 <li><a href="#h_1_1">Determine where the contract was formed</a></li>
 <li><a href="#h_1_2">Gather all facts to determine the status of the worker</a></li>
-<li><a href="#h_1_3">Final analysis based on all factors</a></li>
+<li><a href="#h_1_3">Do a final analysis based on all factors</a></li>
 </ul>
 </li>
 <li><a href="#h_2">What if you are not sure if the worker is an employee or self-employed</a></li>
@@ -1888,7 +1888,7 @@
   </ul>
   </li>
    <li>
-  <h3 id="h_1_3">Final analysis based on all factors</h2>
+  <h3 id="h_1_3">Do a final analysis based on all factors</h2>
   <div id="ajax-facts">
     <h4 id="analyze">Analyze the facts</h4>
     <p>You need to analyze the facts by organizing and assessing the information you gathered. This process will move the worker into one side of the continuum, and confirm if there is an employment relationship, or if the worker is in business on his own account.</p>
