removed 'now' text

--- a/payroll/register/register.html
+++ b/payroll/register/register.html
@@ -104,9 +104,9 @@
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><h4 class="text-muted">Canadian resident business</h4>
-  <p><a class="btn btn-primary mrgn-bttm-sm" href="https://ams-sga.cra-arc.gc.ca/gol-ged/awsc/amss/entry?target=login&amp;lang=en&amp;program=bro">Register now using <abbr title="Business Registration Online">BRO</abbr><br></a></p> </li>
+  <p><a class="btn btn-primary mrgn-bttm-sm" href="https://ams-sga.cra-arc.gc.ca/gol-ged/awsc/amss/entry?target=login&amp;lang=en&amp;program=bro">Register using <abbr title="Business Registration Online">BRO</abbr><br></a></p> </li>
 <li class="cnjnctn-col"><h4 class="text-muted">Non-resident business</h4>
-  <p><a class="btn btn-primary mrgn-bttm-sm" href="https://apps.cra-arc.gc.ca/ebci/uisp/nonres/prot/ntr.action?request_locale=en_CA">Register now using <abbr title="Non-Resident Business Number and Account Registration">NRPNAR</abbr><br></a></p> </li>
+  <p><a class="btn btn-primary mrgn-bttm-sm" href="https://apps.cra-arc.gc.ca/ebci/uisp/nonres/prot/ntr.action?request_locale=en_CA">Register  using <abbr title="Non-Resident Business Number and Account Registration">NRPNAR</abbr><br></a></p> </li>
 </ul>
 
 
