removed 'what' text

--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -109,7 +109,7 @@
 <li><a href="#h_1_3">Do a final analysis based on all factors</a></li>
 </ul>
 </li>
-<li><a href="#h_2">What if you are not sure if the worker is an employee or self-employed</a></li>
+<li><a href="#h_2">If you are not sure if the worker is an employee or self-employed</a></li>
 <li><a href="#h_3">References</a></li>
 </ul>
  <h2 id="h_1">Steps</h2>
@@ -1913,7 +1913,7 @@
     <p>Whether a worker is an employee or self-employed needs to be analyzed on a case-by-case basis. Each case is unique and requires a thorough review of the facts. It is also important to remember that when attempting to move a worker to one side of the continuum or the other, you must examine the <strong>total working relationship</strong>. There is no one factor that is determinative, and there is a non-exhaustive list of factors to consider.</p>
  </li>
   </ol>
- <h2 id="h_2">What if you are not sure if the worker is an employee or self-employed</h2>
+ <h2 id="h_2">If you are not sure if the worker is an employee or self-employed</h2>
 <div data-ajax-replace="/cra-arc/payroll/guidance/overview.html#ajax-ruling"></div>
   </div>
  
