--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -113,10 +113,10 @@
 <ul>
 <li><a href="#h_1_1">Determine where the contract was formed</a></li>
 <li><a href="#h_1_2">Gather all facts to determine the status of the worker</a></li>
-<li><a href="#h_1_3">Final analysis based on all factors</a></li>
+<li><a href="#h_1_3">Do a final analysis based on all factors</a></li>
 </ul>
 </li>
-<li><a href="#h_2">What if you are not sure if the worker is an employee or self-employed</a></li>
+<li><a href="#h_2">If you are not sure if the worker is an employee or self-employed</a></li>
 <li><a href="#h_3">References</a></li>
 </ul>
  <h2 id="h_1">Steps</h2>
@@ -1036,12 +1036,12 @@
   </ul>
 </li>
 <li>
-<h2 id="h_1_3">Final analysis based on all factors</h2>
+<h2 id="h_1_3">Do a final analysis based on all factors</h2>
 
 <div data-ajax-replace="/cra-arc/payroll/guidance/factors-federal.html#ajax-facts"></div>
  	 </li>
 	 </ol>
-	 <h2 id="h_2">What if you are not sure if the worker is an employee or self-employed</h2>
+	 <h2 id="h_2">If you are not sure if the worker is an employee or self-employed</h2>
 <div data-ajax-replace="/cra-arc/payroll/guidance/overview.html#ajax-ruling"></div>
   </div>
 <h2 id="h_3">References</h2>
