fixed lead statement

--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -94,7 +94,7 @@
 <div id="ajax-info2">
 <p>The incorporated employee and the payer have different tax obligations because the incorporated employee <strong>performs the services on behalf of their own corporation</strong>. An incorporated employee in this situation is considered a personal services business (PSB) for income tax purposes.</p>
 </div>
-<p>To understand the tax obligations, continue to one of the following depending on the type of relationship:</p>
+<p>To understand the tax obligations, refer to the 3 types of relationships:</p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><a href="tax-obligations-employee.html">Employee and employer relationship tax obligations</a></li>
