shortened link text

--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -97,9 +97,9 @@
 <p>To understand the tax obligations, refer to the 3 types of relationships:</p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><a href="tax-obligations-employee.html">Employee and employer relationship tax obligations</a></li>
-<li class="cnjnctn-col"><a href="tax-obligations-self.html">Self-employed and payer relationship tax obligations</a></li>
-<li class="cnjnctn-col"><a href="tax-obligations-psb.html">Incorporated employee and payer relationship tax obligations</a></li>
+<li class="cnjnctn-col"><a href="tax-obligations-employee.html">Employee and employer</a></li>
+<li class="cnjnctn-col"><a href="tax-obligations-self.html">Self-employed and payer</a></li>
+<li class="cnjnctn-col"><a href="tax-obligations-psb.html">Incorporated employee and payer</a></li>
 </ul>
 
 
