--- a/payroll/guidance/index.html
+++ b/payroll/guidance/index.html
@@ -91,7 +91,7 @@
 
 </nav>
 <aside>
-	   <h2 class="h3">Prior rulings</h2>
+	   <h2 class="h3">Past court decisions</h2>
 	   <ul>
 	     <li><a href="court-filter.html">Court decisions on employment status</a></li>
 	   </ul>
